<resources>
    <string name="app_name">BooksApp</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>

    <string name="library_toolbar">Library</string>
    <string name="home_toolbar">Books</string>
    <string name="all_books_toolbar">All books</string>
    <string name="book_detail_toolbar">Book Details</string>

    <string name="now_reading_title">Now reading</string>
    <string name="newly_added_title">Newly added</string>
    <string name="see_all">See all</string>
    <string name="publish_date">Publish date: </string>

    <string name="filter_button">Filter</string>
    <string name="apply_button">Apply</string>
    <string name="borrow_button">Borrow</string>

</resources>